solve 2 more tasks

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@ hs_err_pid*
 replay_pid*
 
 ##############################
+## Python
+##############################
+.venv
+
+##############################
 ## Maven
 ##############################
 target/
